kubernetes/apps/network/envoy-gateway/gateways/netpol.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-envoy-external-ingress
spec:
  endpointSelector:
    matchLabels:
      ingress.policy.home.arpa/external: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/managed-by: envoy-gateway
            gateway.networking.k8s.io/gateway-name: external

---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-envoy-internal-ingress
spec:
  endpointSelector:
    matchLabels:
      ingress.policy.home.arpa/internal: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/managed-by: envoy-gateway
            gateway.networking.k8s.io/gateway-name: internal
